#706 Created light theme - almost done, some details missing still.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "theme/darkly/darkly";
 @import "theme/superhero/superhero";
+@import "theme/lux/lux";
 
 // Bootstrap Select
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
