--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -483,7 +483,7 @@ body {
     text-decoration: none;
   }
 
-  #view_route_actions_container a,
+  #view_route_actions_container .btn,
   #edit_route_draw_container .row {
     width: 100%;
     height: 50px;
