--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -324,6 +324,12 @@ body {
     border: var($--theme-header-border) !important;
   }
 
+  @media( max-width: 992px ){
+      #map_header {
+          background-color: var($--theme-header) !important;
+      }
+  }
+
   .bg-dark {
     background-color: var($--theme-darker) !important;
   }
