--- a/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
+++ b/resources/assets/js/handlebars/map_sidebar_enemy_info_template.handlebars
@@ -1,6 +1,6 @@
 {{#each info}}
     <div class="row">
-        <div class="col-6 font-weight-bold">
+        <div class="col-6">
             {{key}}:
         </div>
         <div class="col-6">
