--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -492,17 +492,17 @@ body {
   #view_route_actions_container .btn,
   #edit_route_draw_container .row {
     width: 100%;
-    height: 50px;
+    height: 40px;
   }
 
-  #view_route_actions_container .btn,
-  #edit_route_draw_container .btn {
+  .route_manipulation_tools .btn {
     border: none;
     border-radius: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    padding: 0.750rem;
   }
 
   #view_route_map_actions_container .btn,
