#689 Added rangeslider for the keystone levels.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -39,3 +39,5 @@
 @import "~simplebar/dist/simplebar.min.css";
 // Bootstrap4-toggle
 @import "~bootstrap4-toggle/css/bootstrap4-toggle.min.css";
+// Ion Range Slider
+@import "~ion-rangeslider/css/ion.rangeSlider.min.css";
