#688 Route view card once again reworked a bit. Still a WIP but it scales better now and the image is bigger which I think is important.
Also increased the size of generated thumbnails and reduced the wait time - it should be much quicker to load the page so more can be generated at once.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -100,11 +100,23 @@
 }
 
 /* Container is required for the page load to have a proper width */
-.discover .owl-carousel-container,
-.discover .owl-carousel {
-    width: 192px;
-    height: 128px;
+.discover .owl-carousel-container.single,
+.discover .owl-carousel.single {
+    max-width: 288px;
+    max-height: 192px;
 }
+
+@media (min-width: 1200px) {
+    .discover img.dungeon {
+        max-width: 288px;
+        max-height: 192px;
+    }
+}
+
+/*.discover img.dungeon {*/
+/*    max-width: 192px;*/
+/*    max-height: 128px;*/
+/*}*/
 
 .discover .select_icon.class_icon.selectable,
 .discover .grid_dungeon.selectable {
