#537 Added key levels and filtering for it. Also added a display for the levels on the route card. WIP that is.

--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -638,6 +638,11 @@ body {
     opacity: 0.8;
   }
 
+  /** Disable fractional markers -> https://github.com/IonDen/ion.rangeSlider/issues/171 */
+  .irs--flat .irs-grid-pol.small {
+    height: 0;
+  }
+
   .irs--flat .irs-from:before,
   .irs--flat .irs-to:before,
   .irs--flat .irs-single:before, {
