#689 Reworked search filters to be fully OO.
Needed this to display the filters in the top area - makes the code a lot cleaner anyways.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -107,6 +107,7 @@
         max-height: 192px;
     }
 
+    .discover img.thumbnail,
     .discover img.dungeon {
         max-width: 288px;
         max-height: 192px;
