#689 Added filter summary to the top of the search page so that you can see what you searched for.

--- a/resources/assets/sass/theme/lux/lux.scss
+++ b/resources/assets/sass/theme/lux/lux.scss
@@ -63,4 +63,17 @@
       text-shadow: 1px 1px black;
     }
   }
+
+  .card_dungeonroute {
+    h4 a,
+    .header,
+    .description,
+    .enemy_forces {
+      color: #fff;
+    }
+
+    .bg-card-footer {
+      background-color: #F7F7F7 !important;
+    }
+  }
 }
