--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -103,14 +103,14 @@
     /* Container is required for the page load to have a proper width */
     .discover .owl-carousel-container.single,
     .discover .owl-carousel.single {
-        max-width: 288px;
-        max-height: 192px;
+        width: 288px;
+        height: 192px;
     }
 
     .discover img.thumbnail,
     .discover img.dungeon {
-        max-width: 288px;
-        max-height: 192px;
+        width: 288px;
+        height: 192px;
     }
 }
 
