--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -503,7 +503,7 @@ body {
     height: 40px;
   }
 
-  .route_manipulation_tools .btn {
+  .route_manipulation_tools.left .btn {
     border: none;
     border-radius: 0;
     display: flex;
