#682 Pull sidebar is functional again - though again much work needed to be done still.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -221,47 +221,30 @@ html, body, #map, #app, .wrapper {
     padding: 0.75rem 1.25rem;
 }
 
-/*#killzonesidebar .sidebar-content .card-body {*/
-/*    padding: 0.2rem 0.5rem;*/
-/*}*/
+#pulls_sidebar .map_killzonessidebar_killzone_fill_space {
+    flex: 1 1 auto
+}
 
-/*#killzonesidebar .sidebar-content .card-title {*/
-/*    margin-bottom: 0.4rem;*/
-/*}*/
+#pulls_sidebar [data-toggle="collapse"] .fa:before {
+    content: "\f077";
+}
 
+#pulls_sidebar [data-toggle="collapse"].collapsed .fa:before {
+    content: "\f078";
+}
 
-/*#killzonesidebar .form-group {*/
-/*    margin-bottom: 0.6rem;*/
-/*}*/
+#pulls_sidebar .map_killzonessidebar_floor_switch h6 {
+    font-size: 1.1em;
+}
 
-/*.sidebar .sidebar-panel {*/
-/*    margin: 4px;*/
-/*}*/
+#pulls_sidebar .map_killzonessidebar_floor_switch,
+#pulls_sidebar .map_killzonessidebar_killzone .selectable {
+    cursor: pointer;
+}
 
-/*#killzonesidebar .map_killzonessidebar_killzone_fill_space {*/
-/*    flex: 1 1 auto*/
-/*}*/
-
-/*#killzonesidebar [data-toggle="collapse"] .fa:before {*/
-/*    content: "\f077";*/
-/*}*/
-
-/*#killzonesidebar [data-toggle="collapse"].collapsed .fa:before {*/
-/*    content: "\f078";*/
-/*}*/
-
-/*#killzonesidebar .map_killzonessidebar_floor_switch h6 {*/
-/*    font-size: 1.1em;*/
-/*}*/
-
-/*#killzonesidebar .map_killzonessidebar_floor_switch,*/
-/*#killzonesidebar .map_killzonessidebar_killzone .selectable {*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*#killzonesidebar .map_killzonessidebar_color_btn {*/
-/*    cursor: pointer;*/
-/*}*/
+#pulls_sidebar .map_killzonessidebar_color_btn {
+    cursor: pointer;
+}
 
 #pulls_sidebar .pickr {
     flex: 1 1 auto;
@@ -276,9 +259,9 @@ html, body, #map, #app, .wrapper {
     z-index: 100100;
 }
 
-/*#killzonesidebar .map_killzonessidebar_killzone .selected .text-success {*/
-/*    color: unset !important;*/
-/*}*/
+#pulls_sidebar .map_killzonessidebar_killzone .selected .text-success {
+    color: unset !important;
+}
 
 .grapick_color_picker_button_outer {
     left: -6px;
