--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -1,4 +1,4 @@
-<div id="map_enemy_forces" class="font-weight-bold" data-toggle="tooltip">
+<div id="map_enemy_forces" class="font-weight-bold text-center" data-toggle="tooltip">
     <span id="map_enemy_forces_numbers" class="sidebar-background">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
