Made a lot of changes regarding feedback by Tcheetoz

--- a/resources/assets/sass/home/additional.scss
+++ b/resources/assets/sass/home/additional.scss
@@ -379,6 +379,7 @@
   }
 
   .cid-soU7JptK9v {
+    margin-top: 2rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
     background-color: #232323;
